# regime-adaptive-equity-factor-strategy

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_AUDIT.md  README.md  RESTRUCTURING_REPORT.md  environment.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: default.yaml
data/: README.md
data/sample/: synthetic_panel.csv
legacy/: README.md
legacy/original_notebooks/: Equity Systematic Long-Short Factor Strategy.ipynb
legacy/original_reports/: methodology_assignment3.docx
notebooks/: 01_data_validation.ipynb  02_factor_engineering.ipynb  03_ic_analysis.ipynb  04_backtest_main_strategy.ipynb  05_sensitivity_analysis.ipynb  06_report_figures.ipynb
scripts/: build_dataset.py  generate_report_artifacts.py  generate_sample_data.py  run_backtest.py  run_factor_research.py  run_full_pipeline.py
src/equity_factor_research/: __init__.py  config.py  logging_utils.py
src/equity_factor_research/backtest/: __init__.py  accounting.py  attribution.py  engine.py  performance.py  risk.py
src/equity_factor_research/data/: __init__.py  build_master_dataset.py  load_data.py  reshape_data.py  validate_data.py
src/equity_factor_research/features/: __init__.py  composite.py  factor_definitions.py  lagging.py  momentum.py  normalization.py  winsorization.py
tests/: test_backtest_accounting.py  test_factor_lagging.py  test_ic_weights.py  test_momentum_formula.py  test_no_lookahead.py  test_portfolio_weights.py  test_regime_filter.py  test_transaction_costs.py
(+14 files in other folders)
